prepare 1.6.1 with working installer and a few fixes